     - run: can now also executed without specified <section> <value>
       (the previously set values will be taken in this case)

   o inofficial support for MAX72xx chains - see cfg/tests/max72xx.ngc for
     a configuration example (no schematic available yet)

   o .NGR: fixed "delay statements in if branches" issue

   o the AIN command now supports the "resolution" parameter

   o added "ain_filter_delay_ms" to support sensors

   o the MIDI router forwards SysEx messages regardless if channels are filtered,
     or "All" is used. It's ensured that messages are only sent once if multiple
     router nodes forward to the same destination port.


MIDIbox NG V1.024
~~~~~~~~~~~~~~~~~

   o bugfix for "single_usb" option

   o support for LED Digits (7-segment displays).
     Configuration examples can be found under cfg/tests/leddig*.ngc

   o the DIN_MATRIX and DOUT_MATRIX configuration command now allows to
     mirror the row pattern with "mirrored_row=1"

   o added EVENT_RECEIVER emu_enc_mode and emu_enc_hw_id parameters.
     See cfg/tests/emu_enc.ngc for an usage example

   o .NGR now allows to cast the ID type: (id) or (hw_id).
     E.g. (id)LED:1 will search for the EVENT specified with id=1, and
     (hw_id)LED:1 will search for the EVENT specified with hw_id=1

     if (hw_id) is used (default if no type specified), and no EVENT with
     a matching hw_id can be found, a virtual event will access the control
     element directly. This is currently only relevant for the SET command.

     This matches with the behaviour of the "EVENT ... fwd_id=<id>" function.

   o added RunStop meta event to stop the execution of a .NGR file

   o added "runstop" terminal command

   o new .NGR command: set_rgb <id> <r:g:b>
     E.g. "set_rgb (id)LED:1001 15:8:4"


MIDIbox NG V1.023
~~~~~~~~~~~~~~~~~

   o the current AIN/AINSER pot values can now be taken over by the meta events
     RetrieveAinValues and RetrieveAinserValues

   o new .NGR command: EXEC_META

