@@ -18,6 +18,9 @@ MIDIbox NG V1.025
 
    o the AIN command now supports the "resolution" parameter
 
+   o the AINSER command now supports the "muxed" parameter.
+     Use muxed=1 for the AINSER64 module (default), and muxed=0 for the AINSER8 module.
+
    o added "ain_filter_delay_ms" to support sensors
 
    o the MIDI router forwards SysEx messages regardless if channels are filtered,
